<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_back"
    android:gravity="center|start|top"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/memo"
        android:layout_width="65dp"
        android:layout_height="85dp"
        android:background="@drawable/exp_item_back"
        android:padding="10dp"
        android:src="@drawable/memo"
        android:visibility="gone" />

    <View
        android:id="@+id/v"
        android:layout_width="20px"
        android:layout_height="55dp"
        android:background="#12d757" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tk"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:src="@drawable/tk2" />

                <TextView
                    android:id="@+id/t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Taka"
                    android:textColor="#6e6e6e"
                    android:textSize="13dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="end|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/calendar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:textColor="#545454"
                    android:textSize="13dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Description"
                android:textColor="#6e6e6e"
                android:textSize="13dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:background="#bebebe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center|end"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="#868484"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/del"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/del"
                android:textColor="#868484"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>