<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#555b65"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="সহজ "
                        android:textColor="#606060"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="হিসাব"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="প্রোফাইল"
                        android:textColor="#606060"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/member_icon" />

        <TextView
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#555b65"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/profile_back"
                android:padding="2dp"
                android:src="@drawable/member_icon" />

            <LinearLayout
                android:id="@+id/choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/press_back"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/gallery"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="#868484"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="প্রোফাইল ছবি বাছুন"
                    android:textColor="#868484"
                    android:textSize="14dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="-25dp"
                android:text="* চিহ্নিত ঘরগুলো অবশ্যই পূরণ করতে হবে"
                android:textColor="#333333"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/login_back"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top|start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:hint="পূর্ণনাম *"
                        android:padding="10dp"
                        android:textColor="#616161"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="5dp"
                    android:background="#9b9a9a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top|start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/user"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:hint="ইউজারনেম *"
                        android:padding="10dp"
                        android:textColor="#616161"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="5dp"
                    android:background="#9b9a9a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top|start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:hint="ইমেইল *"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="#616161"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="5dp"
                    android:background="#9b9a9a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top|start"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:rotation="90"
                        android:text="@string/phone"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/phn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:hint="ফোন নাম্বার *"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="#616161"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="5dp"
                    android:background="#9b9a9a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top|start"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/pass"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/pass"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:hint="পাসওয়ার্ড *"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="#616161"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/viewpass"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/eyenot"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="5dp"
                    android:background="#9b9a9a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top|start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/conpass"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/pass"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/passcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:hint="পাসওয়ার্ড যাচাই করুন *"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="#616161"
                        android:textSize="15dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/err"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Error"
                    android:textColor="#ff0000"
                    android:textSize="12dp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/send_back"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="সম্পাদন করুন"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/send"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>