<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#555b65"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="সহজ "
                        android:textColor="#606060"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="হিসাব"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="দেনাপাওনাসমূহ"
                        android:textColor="#606060"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/send_back"
            android:text="PDF"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/member_icon" />

        <TextView
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="#555b65"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ok"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="দেনা : "
                android:textColor="#ffffff"
                android:textSize="12dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/tk1" />

            <TextView
                android:id="@+id/inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notok"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:text="@string/notok"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="পাওনা : "
                android:textColor="#ffffff"
                android:textSize="12dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/tk1" />

            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/bell"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginBottom="0dp"
        android:clipToPadding="true"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="end|center"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Balance Statement"
            android:textColor="#ffffff"
            android:textSize="13dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>